--- a/R-and-Python.Rmd
+++ b/R-and-Python.Rmd
@@ -10,22 +10,20 @@ library(DBI)
 SLOWEVAL <- TRUE
 ```
 
-> **Warning**: I haven't updated the material here in a few years.
+This section aims to provide an overview of working with large datasets in R and (to a lesser extent) Python. Given the scope of topics, this is not meant to be a detailed treatment of each topic.
+
+We'll start with a refresher on data frames in R and Python and some discussion of the dplyr package, whose standard operations are similar to using SQL syntax. Note that what is referred to as split-apply-combine functionality in dplyr in R and in pandas in Python is the same concept as the use of SQL's GROUP BY combined with aggregation operations such as MIN, MAX, AVG, COUNT.
+
+The CSV files for the 2016 Stack Overflow data and the space-delimited files for the Wikipedia traffic data used in the examples below can be obtained [here](http://www.stat.berkeley.edu/share/paciorek/tutorial-databases-data.zip).
 
 
-# 1 Manipulating datasets in memory in R and Python
-
-This section aims to provide an overview of data handling in R and Python. Given the scope of topics, this is not meant to be a detailed treatment of each topic.
-
-Note that what is referred to as split-apply-combine functionality in dplyr in R and in pandas in Python is the same concept as the use of SQL's GROUP BY combined with aggregation operations such as MIN, MAX, AVG, COUNT.
-
-The CSV files for the 2016 Stack Overflow data used in the examples below can be obtained [here](http://www.stat.berkeley.edu/share/paciorek/tutorial-databases-data.zip).
+# 1 Data frames in R and Python
 
 ## 1.1 Data frames in R
 
 A data frame in R is essentially the same as a table in SQL. The notion of a data frame has been essential to the success of R and its existence inspired Python's Pandas package.
 
-R's data frames are stored in memory, but there are now packages (such as dplyr with an SQL backend, `SparkR` and `h2o`) that allow you to treat an external data source as if it were an actual R data frame, using familiar syntax to operate on the data frame.
+R's data frames are stored in memory, but there are now packages (such as dplyr with an SQL backend, `arrow`, `SparkR` and `h2o`) that allow you to treat an external data source as if it were an actual R data frame, using familiar syntax to operate on the data frame.
 
 This tutorial assumes you're familiar with basic data frame functionality in R or Python, so I won't go into more details here.
 
@@ -43,8 +41,31 @@ joined <- merge(users, questions, by.x = 'userid', by.y = 'ownerid',
     all.x = FALSE, all.y = FALSE)  # inner join
 ```
 
+## 1.2 Using SQL syntax with R data frames: `sqldf`
 
-## 1.2 Data frames in Python
+The sqldf package provides the ability to use SQL queries on R data frames (via `sqldf`) and on-the-fly when reading from CSV files (via `read.csv.sql`). The latter can help you avoid reading in the entire dataset into memory in R if you just need a subset of it.
+
+The basic sequence of operations that happens is that the data frame (if using `sqldf`) or the file (if using `read.csv.sql`) is read temporarily into a database and then the requested query is performed on the database, returning the result as a regular R data frame. So you might find things to be a bit slow because of the time involved in creating the database.
+
+The following illustrates usage but the `read.csv.sql` part of the code won't work in practice on this particular example input file, because sqldf regards quotes as part of the text and not as delineating fields. The CSVs for the Stack Overflow data all have quotes distinguishing fields because there are commas within some fields. 
+
+```{r}
+library(sqldf)
+## sqldf
+users <- read.csv(file.path('data','users-2016.csv'))
+oldUsers <- sqldf("select * from users where age > 75")
+
+## read.csv.sql with data read into an in-memory database
+oldUsers <- read.csv.sql(file.path('data', 'users-2016.csv'),  
+      sql = "select * from file where age > 75",
+      dbname = NULL, header = TRUE)
+## read.csv.sql with data read into temporary database on disk
+oldUsers <- read.csv.sql(file.path('data', 'users-2016.csv'),  
+      sql = "select * from file where age > 75",
+      dbname = tempfile(), header = TRUE)
+```
+
+## 1.3 Data frames in Python
 
 The Pandas package has nice functionality for doing dataset manipulations akin to SQL queries including group by/aggregation operations, using a data structure called a DataFrame inspired by R's data frames. Furthermore, Pandas was designed from the start for computational efficiency, in contrast to standard data frames in R (but see below for newer R functionality that is much more efficient). 
 
@@ -63,45 +84,9 @@ joined = pd.merge(users, questions, how= 'inner', left_on= 'userid',
         right_on = 'ownerid')
 ```
 
-## 1.3 `data.table` in R
+# 2 dplyr
 
-The `data.table` package provides a lot of functionality for fast manipulation of datasets in memory. data.table can do the standard SQL operations such as indexing, merges/joins, assignment, grouping, etc. Plus data.table objects are data frames (i.e., they inherit from data frames) so they are compatible with R code that uses data frames.
-
-If you've got enough memory, data.table can be effective with pretty large datasets (e.g., 10s of gigabytes).
-
-To illustrate without the example taking too long, we'll only read in a subset of the Wikipedia webtraffic data.
-
-Let's read in the dataset, specifying the column classes so that fread() doesn't have to detect what they are (which will take additional time and might cause errors). Note that  we can read directly from a UNIX operation piped into R. 
-
-```{r}
-library(data.table)
-colClasses <- c('numeric', 'numeric', 'character', 
-           'character', 'numeric', 'numeric')
-colNames <- c('date', 'hour', 'site', 'page', 'count', 'size')
-system.time(wikiDT <- fread('gzip -cd data/part-0000?.gz', 
- col.names = colNames, colClasses = colClasses, header = FALSE))
-## 30 sec. for 300 MB zipped
-```
-
-Now let's do some basic subsetting. We'll see that setting a key (equivalent to setting an index in SQL) can improve lookup speed dramatically.
-
-```{r}
-## without a key (i.e., index)
-system.time(sub <- subset(wikiDT, count == 635)) # .37 sec.
-system.time(setkey(wikiDT, count , size)) # 4 sec.
-
-## with a key (i.e., index)
-system.time(sub2 <- wikiDT[.(635), ]) # essentially instantaneous
-```
-
-data.table has a lot of functionality and can be used to do a variety of sophisticated queries and manipulations (including aggregation operations), but it has its own somewhat involved syntax and concepts. The above just scratches the surface of what you can do with it. A different option for exploiting data.table is to use dplyr to interface with data.table tables. 
-
-
-## 1.4 dplyr 
-
-### 1.4.1 dplyr overview
-
-#### Introduction
+## 2.1 Overview
 
 dplyr is part of the [tidyverse](http://tidyverse.org/), a set of R packages spearheaded by Hadley Wickham. You can think of dplyr as providing the functionality of SQL (selecting columns, filtering rows, transforming columns, aggregation, and joins) on R data frames using a clean syntax that is easier to use than base R operations.
 
@@ -114,35 +99,35 @@ library(dplyr)
 users <- readr::read_csv(file.path('data', 'users-2016.csv'))
 result <- select(users, userid, displayname)  # select columns
 dim(result)
-result <- filter(users, age < 15)             # filter by row (i.e., SQL WHERE)
+result <- filter(users, age > 75)             # filter by row (i.e., SQL WHERE)
 dim(result)
 ```
 
-#### Piping
+## 2.2 Piping
 
 dplyr is often combined with piping from the `magrittr` package, which allows you to build up a sequence of operations (from left to right), as if you were using UNIX pipes or reading a series of instructions. Here's a very simple example where we combine column selection and filtering in a readable way:
 
 ```{r, dplyr2, eval = TRUE}
-result <- users %>% select(displayname, userid, age) %>% filter(age > 15)
+result <- users %>% select(displayname, userid, age) %>% filter(age > 75)
 ```
 
 What happens here is that the operations are run from left to right (except for the assignment into `result`) and the result of the left-hand side of a `%>%` is passed into the right-hand side function as the first argument. So this one liner is equivalent to:
 
 ```{r, dplyr3, eval = TRUE}
 tmp <- select(users, displayname, userid, age)
-result2 <- filter(tmp, age > 15)
+result2 <- filter(tmp, age > 75)
 identical(result, result2)
 ```
 
 and also equivalent to:
 ```{r, dplyr4, eval = TRUE}
-result3 <- filter(select(users, displayname, userid, age), age > 15)
+result3 <- filter(select(users, displayname, userid, age), age > 75)
 identical(result, result3)
 ```
 
 We'll use pipes in the remainder of the dplyr examples.
 
-#### Functionality
+## 2.3 Functionality
 
 Here's how one can do stratified analysis with aggregation operations. In the dplyr world, this is known as split-apply-combine but in the SQL world this is just a GROUP BY with some aggregation operation.
 
@@ -163,9 +148,9 @@ users2 <- users %>% mutate(year = substring(creationdate, 1, 4),
 users2 <- users %>% arrange(age, desc(upvotes))
 ## joins
 questions <- readr::read_csv(file.path('data', 'questions-2016.csv'))
-questionsOfYouth <- users %>% filter(age < 15) %>%
+questionsOfAge <- users %>% filter(age > 75) %>%
                inner_join(questions, by = c("userid" = "ownerid"))
-head(questionsOfYouth)
+head(questionsOfAge)
 ```
 
 > **Challenge**: Why did I first filter and then do the join, rather than the reverse?
@@ -174,15 +159,15 @@ The join functions include `inner_join`, `left_join`, `right_join`, `full_join`.
 
 In addition to operating directly on data frames, dplyr can also operate on databases and data.table objects as the back-end storage, as we'll see next.
 
-#### Miscellanea
+## 2.4 Cautionary notes
 
 Note that dplyr and other packages in the tidyverse use a modified form of data frames. In some cases you may want to convert back to a standard data frame using `as.data.frame`. For example:
 
 ```{r, dplyr7, eval=TRUE}
-as.data.frame(head(questionsOfYouth, 3))
+as.data.frame(head(questionsOfAge, 3))
 ```
 
-Note that dplyr and other tidyverse packages use a lot of "non-standard evaluation". In this context of non-standard evaluation, the thing to pay attention to is that the column names are not quoted. This means that one cannot use a variable to stand in for a column. So the following woudn't work because dplyr would literally look for a variable named "colname" in the data frame. As of recent versions of dplyr, there is a system called tidyeval for addressing this but I won't go into it further here.
+Note that dplyr and other tidyverse packages use a lot of "non-standard evaluation". In this context of non-standard evaluation, the thing to pay attention to is that the column names are not quoted. This means that one cannot use a variable to stand in for a column. So the following woudn't work because dplyr would literally look for a variable named "colname" in the data frame. There is a [system for addressing this](https://dplyr.tidyverse.org/articles/programming.html) but I won't go into it further here.
 
 ```{r, dplyr8, eval=FALSE}
 ## this won't work because of non-standard evaluation! 
@@ -191,9 +176,9 @@ myfun <- function(df, colname)
 myfun(questions, 'age')
 ```
 
-### 1.4.2 dplyr with SQL and databases
+## 2.5 dplyr with SQL and databases
 
-To connect to an SQLite or Postgres database we can use `src_sqlite` and `src_postgres`:
+We can connect to an SQLite or Postgres database (using `src_sqlite` and `src_postgres`) and then query it using dplyr syntax:
 
 ```{r, eval=TRUE}
 stackoverflow <- src_sqlite(file.path('data', 'stackoverflow-2016.db'))
@@ -205,76 +190,149 @@ head(oldFolks)
 
 The `collect` statement after the filtering is needed because dplyr uses lazy evaluation when interfacing with databases -- it only does the query and return results when the results are needed.
 
+# 3 Manipulating datasets quickly in memory in R and Python
 
-### 1.4 dplyr with data.table
+## 3.1 `data.table` in R
 
-Similarly you can use dplyr with data tables (i.e., from data.table). We'll take our existing `wikiDT` data table that we read in using `fread` and manipulate it using dplyr syntax.
+The `data.table` package provides a lot of functionality for fast manipulation of datasets in memory. data.table can do the standard SQL operations such as indexing, merges/joins, assignment, grouping, etc. Plus data.table objects are data frames (i.e., they inherit from data frames) so they are compatible with R code that uses data frames.
+
+If you've got enough memory, data.table can be effective with pretty large datasets (e.g., 10s of gigabytes).
+
+To illustrate without the example taking too long, we'll only read in a subset of the Wikipedia webtraffic data.
+
+Let's read in the dataset, specifying the column classes so that fread() doesn't have to detect what they are (which will take additional time and might cause errors). Note that  we can read directly from a UNIX operation piped into R. 
 
 ```{r}
-system.time(sub <- wikiDT %>% filter(count==635)) # 0.1 sec.
+library(data.table)
+colClasses <- c('numeric', 'numeric', 'character', 
+           'character', 'numeric', 'numeric')
+colNames <- c('date', 'hour', 'site', 'page', 'count', 'size')
+system.time(wikiDT <- fread('gzip -cd data/part-0000?.gz', 
+ col.names = colNames, colClasses = colClasses, header = FALSE,
+ quote = ""))
+## 30 sec. for 300 MB zipped
 ```
 
-## 1.5 Using SQL with R data frames: `sqldf`
+Now let's do some basic subsetting. We'll see that setting a key (equivalent to setting an index in SQL) can improve lookup speed dramatically.
 
-Finally the sqldf package provides the ability to use SQL queries on R data frames (via `sqldf`) and on-the-fly when reading from CSV files (via `read.csv.sql`). The latter can help you avoid reading in the entire
-dataset into memory in R if you just need a subset of it.
+```{r}
+## without a key (i.e., index)
+system.time(sub <- subset(wikiDT, count == 512)) # .27 sec.
+system.time(setkey(wikiDT, count , size)) # 3 sec.
 
-The basic sequence of operations that happens is that the data frame (if using `sqldf`) or the file (if using `read.csv.sql`) is read temporarily into a database and then the requested query is performed on the database, returning the result as a regular R data frame.
-
-The following illustrates usage but the `read.csv.sql` part of the code won't work in practice on this particular example input file, because sqldf regards quotes as part of the text and not as delineating fields. The CSVs for the Stack Overflow data all have quotes distinguishing fields because there are commas within some fields. 
-
-```{r, eval=FALSE}
-library(sqldf)
-## sqldf
-users <- read.csv(file.path('data','users-2016.csv'))
-youngUsers <- sqldf("select * from users where age < 15")
-
-## read.csv.sql with data read into an in-memory database
-youngUsers <- read.csv.sql(file.path('data', 'users-2016.csv'),  
-      sql = "select * from file where age < 15",
-      dbname = NULL, header = TRUE)
-## read.csv.sql with data read into temporary database on disk
-youngUsers <- read.csv.sql(file.path('data', 'users-2016.csv'),  
-      sql = "select * from file where age < 15",
-      dbname = tempfile(), header = TRUE)
+## with a key (i.e., index)
+system.time(sub2 <- wikiDT[.(512), ]) # essentially instantaneous
 ```
 
-
-## 1.6 Speed comparisons
-
-There is some benchmarking of some of the R and Python tools discussed in this section [here](https://github.com/Rdatatable/data.table/wiki/Benchmarks-%3A-Grouping).
+data.table has a lot of functionality and can be used to do a variety of sophisticated queries and manipulations (including aggregation operations), but it has its own somewhat involved syntax and concepts. The above just scratches the surface of what you can do with it. 
 
 
-# 2 Manipulating datasets not in memory in R
+## 3.2 Using dplyr syntax with data.table
 
-## 2.1 ff package
+Rather than learning the data.table syntax, one can also use dplyr syntax with data.table objects.
+
+We can use dplyr syntax directly with data table objects, illustrated here with our existing `wikiDT` data table.
+
+```{r}
+system.time(sub <- wikiDT %>% filter(count == 512)) 
+```
+
+One can also use `dtplyr` to set use a data table as a back end for dplyr manipulations. Using `lazy_dt` allows dtplyr to do some optimization as it generates the translation from dplyr syntax to data table syntax, though this simple example doesn't illustrate the usefulness of that. 
+
+```{r}
+wikiDT2 <- lazy_dt(wikiDT)
+system.time(sub <- wikiDT2 %>% filter(count == 512)) # 0.1 sec.
+as.data.frame(sub)
+```
+
+Finally the `tidytable` package also allows you to use dplyr syntax as well as other tidyverse syntax, such as `tidyr` functions. 
+
+## 3.3 Arrow
+
+Apache Arrow provides efficient data structures for working with data in memory, usable in R via the `arrow` package. Data are stored by column, with values in a column stored sequentially and in such a way that one can access a specific value without reading the other values in the column (O(1) lookup).
+
+Arrow is designed to read data from various file formats, including Parquet, native Arrow format, and text files. In general Arrow will only read data from disk as needed, avoiding keeping the entire dataset in memory. We'll discuss this concept more in the next section.
+
+One can use [dplyr syntax to work with data in the Arrow data structures](https://cran.r-project.org/web/packages/arrow/vignettes/dataset.html).
+
+# 4 Working with large datasets on disk
+
+There are a variety of packages that allow you to work with very large datasets on disk without loading them fully into memory. Some of these are also very good at compressing files to reduce disk storage.
+
+And note that one can use `sqldf::read.csv.sql` to avoid reading all the data in from disk.
+
+To illustrate use of these packages, we'll first create a data frame of some of the Wikipedia traffic data, 2.3 GB of data:
+
+```{r, fst-prep}
+## read in Wikistats data
+wikiDF <- readr::read_table(file = pipe("gzip -cd data/part-0000?.gz"),
+        col_names = c('day','hour','language','site','hits','size'),
+        col_types = c('nnccnn'))
+```
+
+I recommend first considering Arrow or fst as they work well with the usual data frame manipulations, but the other packages mentioned here may also be useful.
+
+## 4.1 Arrow
+
+The Arrow package allows you to read and write from datasets stored as one or (often) more files in various formats, including:
+
+  - parquet: a space-efficient, standard format;
+  - arrow format: data are stored in the same format on disk as in memory, improving I/O speed; and
+  - text/csv files.
+
+After loading the data in (which doesn't initially involve actually reading the data from disk), you can then operate on the resulting object using dplyr syntax. Arrow will only read the data it needs for your computations (how much has to be read depends on the file format, with the native arrow format best in this regard), which can reduce I/O and memory usage.
+
+There's a [nice vignette](https://cran.r-project.org/web/packages/arrow/vignettes/dataset.html) covering basic usage, as well as [this discussion](https://stackoverflow.com/questions/56472727/difference-between-apache-parquet-and-arrow) of file formats.
+
+## 4.2 fst
+
+The fst package for R provides the ability to quickly read and write data frames in parallel from data stored on disk in the efficient fst format. A key feature in terms of reducing memory use  is that data can be quickly accessed by column or by row (O(1) lookup), allowing one to easily subset the data when reading, rather than reading the entire dataset into memory, which is what would otherwise happen.
+
+Here's an example, starting with an original data frame in R (which might defeat the purpose if the dataset size is too big to fit in memory).
+
+
+```{r, fst-write, eval=FALSE}
+system.time(write_fst(wikiDF, file.path('/tmp', 'data.fst')))  ## 8.9 seconds
+```
+
+The size of the compressed file is 790 MB based on the default compression, but one can choose different compression levels.
+
+
+```{r, fst-read}
+system.time(wikiDF <- read_fst(file.path('/tmp','data.fst')))  ## 8.4 seconds
+```
+
+The 8 seconds to read the data compares to 55 seconds to read the data from the gzipped files via a connection using `readr::read_table` and 29 seconds via `data.table::fread`. 
+
+## 4.3 Additional packages (ff, LaF, bigmemory)
+
+### 4.3.1 ff
 
 ff stores datasets in columnar format, with one file per column, on disk, so is not limited by memory (with the caveat below). It then provides fast access to the dataset from R.
 
 To create the disk-based ff dataset, you'll need to first read in the data from its original home. Note the arguments are similar to those for `read.table` and `read.csv`. `read.table.ffdf` reads the data in chunks.
 
-```{r}
+```{r, eval = FALSE}
 library(ff)
 colClasses <- c('numeric','numeric','character', 'character','numeric','numeric')
 colClasses[colClasses == 'character'] <- 'factor'  # 'character' not allowed in ff
-## read in Wikistats data
-wikiff <- read.table.ffdf(file = pipe("gzip -cd data/0000?gz"),
+## read in Wikistats data; this will take a while.
+wikiff <- read.table.ffdf(file = pipe("gzip -cd data/part-0000?.gz"),
         colClasses = colClasses, sep = ' ')
 ```
 
 
 Now, one can save the ff dataset into permanent storage on disk that can be much more quickly loaded than the original reading of the data above.
 
-```{r}
-ffsave(wikiff, file = 'wikistats')
+```{r, eval = FALSE}
+system.time(ffsave(wikiff, file = 'wikistats'))   ## 80 sec.
 rm(wikiff)
 ```
 
-
 Here's how one loads the dataset back in.
 
-```{r}
-ffload('wikistats')
+```{r, eval = FALSE}
+system.time(ffload('wikistats'))  ## 20 sec.
 ```
 
 In the above operations, we wrote a copy of the file in the ff binary format that can be read more quickly back into R than the original reading of the CSV using `ffsave` and `ffload`. Also note the reduced size of the binary format file compared to the original CSV. It's good to be aware of where the binary ff file is stored given that for large datasets, it will be large. With ff (I think bigmemory is different in how it handles this) it appears to be stored in `/tmp` in an R temporary directory. Note that as we work with large files we need to be more aware of the filesystem, making sure in this case that /tmp has enough space. 
@@ -283,11 +341,11 @@ To use ff effectively, you want to use functions designed to manipulate ff objec
 You can look at the ff and ffbase packages to see what functions are available using ```library(help = ff)``` and ```library(help = ffbase)```. Notice that there is an `merge.ff` function for joins. Here we use the ff-specific table function:
 
 
-```{r}
+```{r, eval = FALSE}
 table.ff(wikiff$hour)
 ```
 
-### Miscellanea
+#### Miscellanea
 
 Note that a copy of an ff object appears to be a shallow copy: if you modify the copy it will change the data in the original object.
 
@@ -295,22 +353,22 @@ Note that `ff` stores factor levels *in memory*, so if one has many factor level
 
 Also, I've encountered problems when there are more than about 1000 columns because each column is a separate file and there can be limitations in R on how many files it has open at once.
 
-## 2.2 LaF package
+### 4.3.2 LaF package
 
 The LaF package is designed to quickly read in data from CSV and FWF (fixed-width format) input files, efficiently handling cases where you only want some of the rows or columns. It requires unzipped text files as input, so one can't unzip input files on the fly via piping.
 
-```
+```{r, laF, eval=FALSE}
 colClasses <- c('numeric','numeric','character', 'character','numeric','numeric')
 colNames <- c('date', 'hour', 'site', 'page', 'count', 'size')
 ## read in Wikistats data
-datLaF <- laf_open_csv(file.path('data', 'part-0000.txt'), sep = ' ',
+datLaF <- laf_open_csv(file.path('data', 'part-00000.txt'), sep = ' ',
        column_types = colClasses, column_names = colNames)  ## returns immediately
 sub <- datLaf[dat$count[] == 635,]
 ```
 
 If you run this you'll see that the `laf_open_csv` took no time, indicating LaF is using lazy evaluation.
 
-## 2.3 bigmemory for matrices
+## 4.3.3 bigmemory for matrices
 
 `bigmemory` is similar to ff in providing the ability to load datasets into R without having
 them in memory, but rather stored in clever ways on disk that allow for fast access.
@@ -324,18 +382,14 @@ access the matrix stored on disk.
 The `biglm` package provides the ability to fit linear models and GLMs to big datasets, with
 integration with ff and bigmemory.
 
-## 2.4 pbdR for manipulating matrices across multiple machines (distributed computing)
+# 4.4 Online (batch) processing of data in R and Python
 
-[pbdR](https://rbigdata.github.io/) provides a suite of packages for doing computations (particularly linear algebra) where the data and the computations are both distributed across multiple machines. More details are available in my [distributed computing tutorial](http://statistics.berkeley.edu/computing/training/tutorials)
-
-# 3 Online (batch) processing of data in R and Python
-
-When data are too big to fit in memory, one may want to preprocess data in batches, only reading in chunks of data that can fit in memory before doing some computation or writing back out to disk and then reading in the next chunk. When taking this approach, you want to ensure that the code you are using will be able to skip directly to the point in the file where it should read the next chunk of data from (randomly accessing memory) rather than reading all the data up to the point of interest and simply discarding the initial data.
+Another approach is to manually process the data in batches, only reading in chunks of data that can fit in memory before doing some computation or writing back out to disk and then reading in the next chunk. When taking this approach, you want to ensure that the code you are using will be able to skip directly to the point in the file where it should read the next chunk of data from (randomly accessing memory) rather than reading all the data up to the point of interest and simply discarding the initial data.
 
 Not surprisingly there is a ton more functionality than shown below (in both Python and R) for reading chunks from files as well as skipping ahead in a file via a file connection or stream. 
 
 
-## 3.1 Online processing in R
+## 4.4.1 Online processing in R
 
 In R, various input functions can read in a subset of a file or can skip ahead. In general the critical step is to use a *connection* rather than directly opening the file, as this will allow one to efficiently read the data in in chunks.
 
@@ -376,7 +430,7 @@ system.time(dat4r <- read_csv(fn, n_max = 100000, skip = 1000001, col_names = FA
 
 Note that `read_csv` can handle zipped inputs, but does not handle a standard text file connection. 
 
-## 3.2 Online processing in Python
+## 4.4.2 Online processing in Python
 
 Pandas' `read_csv` has similar functionality in terms of reading a fixed number of rows and skipping rows, and it can decompress zipped files on the fly. 
 
