clean up R-and-Python

--- a/R-and-Python.Rmd
+++ b/R-and-Python.Rmd
@@ -192,13 +192,13 @@ oldFolks <- users %>% filter(age > 75)
 head(oldFolks)
 ```
 
-Note that  uses lazy evaluation when interfacing with databases -- it only does the query and return results when the results are needed (in this case when we call `head`).
+> **Note**: dplyr uses lazy evaluation when interfacing with databases -- it only does the query and return results when the results are needed (in this case when we call `head`).
 
 # 3 Manipulating datasets quickly in memory in R and Python
 
 ## 3.1 `data.table` in R
 
-The `data.table` package provides a lot of functionality for fast manipulation of datasets in memory. data.table can do the standard SQL operations such as indexing, merges/joins, assignment, grouping, etc. Plus data.table objects are data frames (i.e., they inherit from data frames) so they are compatible with R code that uses data frames.
+The *data.table* package provides a lot of functionality for fast manipulation of datasets in memory. data.table can do the standard SQL operations such as indexing, merges/joins, assignment, grouping, etc. Plus data.table objects are data frames (i.e., they inherit from data frames) so they are compatible with R code that uses data frames.
 
 If you've got enough memory, data.table can be effective with pretty large datasets (e.g., 10s of gigabytes).
 
@@ -246,7 +246,6 @@ One can also use `dtplyr` to set use a data table as a back end for dplyr manipu
 ```{r}
 wikiDT2 <- lazy_dt(wikiDT)
 system.time(sub <- wikiDT2 %>% filter(count == 512)) # 0.1 sec.
-as.data.frame(sub)
 ```
 
 Finally the `tidytable` package also allows you to use dplyr syntax as well as other tidyverse syntax, such as `tidyr` functions. 
@@ -263,6 +262,8 @@ One can use [dplyr syntax to work with data in the Arrow data structures](https:
 
 There are a variety of packages that allow you to work with very large datasets on disk without loading them fully into memory. Some of these are also very good at compressing files to reduce disk storage.
 
+I recommend first considering Arrow or fst as they work well with the usual data frame manipulations, but the other packages mentioned here may also be useful.
+
 And note that one can use `sqldf::read.csv.sql` to avoid reading all the data in from disk.
 
 To illustrate use of these packages, we'll first create a data frame of some of the Wikipedia traffic data, 2.3 GB of data:
@@ -274,11 +275,11 @@ wikiDF <- readr::read_table(file = pipe("gzip -cd data/part-0000?.gz"),
         col_types = c('nnccnn'))
 ```
 
-I recommend first considering Arrow or fst as they work well with the usual data frame manipulations, but the other packages mentioned here may also be useful.
+
 
 ## 4.1 Arrow
 
-The Arrow package allows you to read and write from datasets stored as one or (often) more files in various formats, including:
+The *arrow* package allows you to read and write from datasets stored as one or (often) more files in various formats, including:
 
   - parquet: a space-efficient, standard format;
   - arrow format: data are stored in the same format on disk as in memory, improving I/O speed; and
@@ -290,7 +291,7 @@ There's a [nice vignette](https://cran.r-project.org/web/packages/arrow/vignette
 
 ## 4.2 fst
 
-The fst package for R provides the ability to quickly read and write data frames in parallel from data stored on disk in the efficient fst format. A key feature in terms of reducing memory use  is that data can be quickly accessed by column or by row (O(1) lookup), allowing one to easily subset the data when reading, rather than reading the entire dataset into memory, which is what would otherwise happen.
+The *fst* package for R provides the ability to quickly read and write data frames in parallel from data stored on disk in the efficient fst format. A key feature in terms of reducing memory use  is that data can be quickly accessed by column or by row (O(1) lookup), allowing one to easily subset the data when reading, rather than reading the entire dataset into memory, which is what would otherwise happen.
 
 Here's an example, starting with an original data frame in R (which might defeat the purpose if the dataset size is too big to fit in memory).
 
@@ -372,7 +373,7 @@ sub <- datLaf[dat$count[] == 635,]
 
 If you run this you'll see that the `laf_open_csv` took no time, indicating LaF is using lazy evaluation.
 
-## 4.3.3 bigmemory for matrices
+### 4.3.3 bigmemory for matrices
 
 `bigmemory` is similar to ff in providing the ability to load datasets into R without having
 them in memory, but rather stored in clever ways on disk that allow for fast access.
@@ -386,14 +387,14 @@ access the matrix stored on disk.
 The `biglm` package provides the ability to fit linear models and GLMs to big datasets, with
 integration with ff and bigmemory.
 
-# 4.4 Online (batch) processing of data in R and Python
+## 4.4 Online (batch) processing of data in R and Python
 
 Another approach is to manually process the data in batches, only reading in chunks of data that can fit in memory before doing some computation or writing back out to disk and then reading in the next chunk. When taking this approach, you want to ensure that the code you are using will be able to skip directly to the point in the file where it should read the next chunk of data from (randomly accessing memory) rather than reading all the data up to the point of interest and simply discarding the initial data.
 
 Not surprisingly there is a ton more functionality than shown below (in both Python and R) for reading chunks from files as well as skipping ahead in a file via a file connection or stream. 
 
 
-## 4.4.1 Online processing in R
+### 4.4.1 Online processing in R
 
 In R, various input functions can read in a subset of a file or can skip ahead. In general the critical step is to use a *connection* rather than directly opening the file, as this will allow one to efficiently read the data in in chunks.
 
@@ -403,38 +404,38 @@ First we'll see that skipping ahead when not using a connection is costly -- R n
 
 ```{r}
 fn <- file.path('data', 'questions-2016.csv')
-system.time(dat1 <- read.csv(fn, nrows = 100000, header = TRUE))  # 2.0 sec.
-system.time(dat2 <- read.csv(fn, nrows = 100000, skip = 100001, header = FALSE)) # 2.5 sec.
-system.time(dat3 <- read.csv(fn, nrows = 1, skip = 100001, header = FALSE)) # 0.5 sec.
-system.time(dat4 <- read.csv(fn, nrows = 100000, skip = 1000001, header = FALSE)) # 9.3 sec.
+system.time(dat1 <- read.csv(fn, nrows = 100000, header = TRUE))  # 0.3 sec.
+system.time(dat2 <- read.csv(fn, nrows = 100000, skip = 100001, header = FALSE)) # 0.5 sec.
+system.time(dat3 <- read.csv(fn, nrows = 1, skip = 100001, header = FALSE)) # 0.15 sec.
+system.time(dat4 <- read.csv(fn, nrows = 100000, skip = 1000001, header = FALSE)) # 3.7 sec.
 ```
 If we use a connection, this cost is avoided (although there is still a cost to skipping ahead compared to reading in chunks, picking up where the last chunk left off):
 
 ```{r}
 fn <- file.path('data', 'questions-2016.csv')
 con <- file(fn, open = 'r')
-system.time(dat1c <- read.csv(con, nrows = 100000, header = TRUE)) # 1.4 sec.
-system.time(dat2c <- read.csv(con, nrows = 100000, header = FALSE)) # 1.4 sec.
+system.time(dat1c <- read.csv(con, nrows = 100000, header = TRUE)) # 0.3 sec.
+system.time(dat2c <- read.csv(con, nrows = 100000, header = FALSE)) # 0.3 sec.
 system.time(dat3c <- read.csv(con, nrows = 1, header = FALSE)) # .001 sec.
-system.time(dat5c <- read.csv(con, skip = 100000, nrows = 1, header = FALSE)) # .5 sec
+system.time(dat5c <- read.csv(con, nrows = 1, skip = 100000, header = FALSE)) # .15 sec
 ```
 
 You can use `gzfile`, `bzfile`, `url`, and `pipe` to open connections to zipped files, files on the internet, and inputs processed through UNIX-style piping.  
 
-`read_csv` is much faster and seems to be able to skip ahead efficiently even though it is not using a connection (which surprises me given that with a CSV file you don't know how big each line is so one would think one needs to process through each line in some fashion).
+`read_csv` is generally somewhat faster and seems to be able to skip ahead efficiently even though it is not using a connection (which surprises me given that with a CSV file you don't know how big each line is so one would think one needs to process through each line in some fashion).
 
 ```{r}
 library(readr)
 fn <- file.path('data', 'questions-2016.csv')
-system.time(dat1r <- read_csv(fn, n_max = 100000, col_names = TRUE))   # 0.2 sec.
-system.time(dat2r <- read_csv(fn, n_max = 100000, skip = 100001, col_names = FALSE)) # 0.3 sec
-system.time(dat3r <- read_csv(fn, n_max = 1, skip = 200001, col_names = FALSE)) # 0.1 sec
-system.time(dat4r <- read_csv(fn, n_max = 100000, skip = 1000001, col_names = FALSE)) # 0.6 sec
+system.time(dat1r <- read_csv(fn, n_max = 100000, col_names = TRUE))   # 0.4 sec.
+system.time(dat2r <- read_csv(fn, n_max = 100000, skip = 100001, col_names = FALSE)) # 0.13 sec
+system.time(dat3r <- read_csv(fn, n_max = 1, skip = 200001, col_names = FALSE)) # 0.07 sec
+system.time(dat4r <- read_csv(fn, n_max = 100000, skip = 1000001, col_names = FALSE)) # 0.18 sec
 ```
 
 Note that `read_csv` can handle zipped inputs, but does not handle a standard text file connection. 
 
-## 4.4.2 Online processing in Python
+### 4.4.2 Online processing in Python
 
 Pandas' `read_csv` has similar functionality in terms of reading a fixed number of rows and skipping rows, and it can decompress zipped files on the fly. 
 
