--- a/R-and-Python.Rmd
+++ b/R-and-Python.Rmd
@@ -260,7 +260,7 @@ One can use [dplyr syntax to work with data in the Arrow data structures](https:
 
 # 4 Working with large datasets on disk
 
-There are a variety of packages that allow you to work with very large datasets on disk without loading them fully into memory. Some of these are also very good at compressing files to reduce disk storage.
+There are a variety of packages in R that allow you to work with very large datasets on disk without loading them fully into memory. Some of these are also very good at compressing files to reduce disk storage.
 
 I recommend first considering Arrow or fst as they work well with the usual data frame manipulations, but the other packages mentioned here may also be useful.
 
@@ -288,6 +288,8 @@ The *arrow* package allows you to read and write from datasets stored as one or 
 After loading the data in (which doesn't initially involve actually reading the data from disk), you can then operate on the resulting object using dplyr syntax. Arrow will only read the data it needs for your computations (how much has to be read depends on the file format, with the native arrow format best in this regard), which can reduce I/O and memory usage.
 
 There's a [nice vignette](https://cran.r-project.org/web/packages/arrow/vignettes/dataset.html) covering basic usage, as well as [this discussion](https://stackoverflow.com/questions/56472727/difference-between-apache-parquet-and-arrow) of file formats.
+
+The *PyArrow* package is available for Python, but I haven't explored it.
 
 ## 4.2 fst
 
