--- a/R-and-Python.Rmd
+++ b/R-and-Python.Rmd
@@ -287,6 +287,8 @@ The *arrow* package allows you to read and write from datasets stored as one or 
 
 After loading the data in (which doesn't initially involve actually reading the data from disk), you can then operate on the resulting object using dplyr syntax. Arrow will only read the data it needs for your computations (how much has to be read depends on the file format, with the native arrow format best in this regard), which can reduce I/O and memory usage.
 
+> **Note**: If you're going to be reading the data frequently off disk, storing the files in text/CSV is not a good idea as it will be much faster to read from the Parquet or Arrow formats.
+
 There's a [nice vignette](https://cran.r-project.org/web/packages/arrow/vignettes/dataset.html) covering basic usage, as well as [this discussion](https://stackoverflow.com/questions/56472727/difference-between-apache-parquet-and-arrow) of file formats.
 
 The *PyArrow* package is available for Python, but I haven't explored it.
