--- a/index.Rmd
+++ b/index.Rmd
@@ -339,8 +339,8 @@ For SQLite:
 
 ```{python, eval=FALSE}
 import sqlite3 as sq
-dir <- 'data' # relative or absolute path to where the .db file is
-dbFilename <- 'stackoverflow-2016.db'
+dir = 'data' # relative or absolute path to where the .db file is
+dbFilename = 'stackoverflow-2016.db'
 import os
 db = sq.connect(os.path.join('data', dbFilename))
 c = db.cursor()
