add a bit of Python info to R-and-Python

--- a/sql.Rmd
+++ b/sql.Rmd
@@ -320,11 +320,19 @@ result <- dbGetQuery(db, "select * from questions_tags
 
 > **Note**: The matching does not match on substrins, unless one uses wildcards at beginning and end of the pattern, so "r" will only find "r" and not, for example, "dplyr".
 
-To extract substrings we can SUBSTRING in Postgres. Postgres requires that the pattern to be extracted be surrounded by `#"` (one could use another character in place of `#`), but for use from R we need to escape the double-quote with a backslash so it is treated as a part of the string passed to Postgres and not treated by R as indicating where the character string stops/starts. 
+To extract substrings we can SUBSTRING in Postgres. Here's a basic example:
+
+```{r}
+dbGetQuery(db, "select substring(creationdate from '^[[:digit:]]{4}') as year
+                from questions limit 3")
+```
+
+If you need to specify the pattern to be extracted relative to the surrounding characters, then 
+Postgres requires that the pattern to be extracted be surrounded by `#"` (one could use another character in place of `#`), but for use from R we need to escape the double-quote with a backslash so it is treated as a part of the string passed to Postgres and not treated by R as indicating where the character string stops/starts. We also need the % wildcard character when extracting in this way.
 
 ```{r}
 dbGetQuery(db, "select substring(creationdate from
-                '#\"[[:digit:]]{4}#\"%' for '#') as year
+                '%-#\"[[:digit:]]{4}#\"-%' for '#') as month
                 from questions limit 3")
 ```
 
