add a bit of Polars info to R-and-Python

--- a/R-and-Python.Rmd
+++ b/R-and-Python.Rmd
@@ -198,7 +198,7 @@ head(oldFolks)
 
 > **Note**: dplyr uses lazy evaluation when interfacing with databases -- it only does the query and return results when the results are needed (in this case when we call `head`).
 
-# 3 Manipulating datasets quickly in memory in R
+# 3 Manipulating datasets quickly in memory 
 
 ## 3.1 `data.table` in R
 
@@ -235,7 +235,7 @@ system.time(sub2 <- wikiDT[.(512), ]) # essentially instantaneous
 data.table has a lot of functionality and can be used to do a variety of sophisticated queries and manipulations (including aggregation operations), but it has its own somewhat involved syntax and concepts. The above just scratches the surface of what you can do with it. 
 
 
-## 3.2 Using dplyr syntax with data.table
+## 3.2 Using dplyr syntax with data.table in R
 
 Rather than learning the data.table syntax, one can also use dplyr syntax with data.table objects.
 
@@ -256,11 +256,16 @@ Finally the `tidytable` package also allows you to use dplyr syntax as well as o
 
 ## 3.3 Arrow
 
-Apache Arrow provides efficient data structures for working with data in memory, usable in R via the `arrow` package. Data are stored by column, with values in a column stored sequentially and in such a way that one can access a specific value without reading the other values in the column (O(1) lookup).
+Apache Arrow provides efficient data structures for working with data in memory, usable in R via the `arrow` package and the `PyArrow` package in Python. Data are stored by column, with values in a column stored sequentially and in such a way that one can access a specific value without reading the other values in the column (O(1) lookup).
 
 Arrow is designed to read data from various file formats, including Parquet, native Arrow format, and text files. In general Arrow will only read data from disk as needed, avoiding keeping the entire dataset in memory. We'll discuss this concept more in the next section.
 
 One can use [dplyr syntax to work with data in the Arrow data structures](https://cran.r-project.org/web/packages/arrow/vignettes/dataset.html).
+
+## 3.4 Polars dataframes in Python
+
+I haven't investigated it, but [Polars](https://pola-rs.github.io/polars-book/user-guide/index.html) is advertized as a very fast in-memory package for working with dataframes that provides a Python interface. It uses the Arrow columnar format. It also provides a lazy execution model like Spark or Dask that allows for automatic optimization of queries.
+
 
 # 4 Working with large datasets on disk
 
