--- a/sql.Rmd
+++ b/sql.Rmd
@@ -276,6 +276,8 @@ One use of a view would be to create a mega table that stores all the informatio
 dbExecute(db, "drop view questions_plus") # drop the view if we no longer need it
 ```
 
+If you want to create a temporary table just for a single query, you can use a subquery or a WITH clause, as dicussed in [Section 3.2](#32-subqueries).
+
 # 2 Additional SQL topics
 
 ## 2.1 Creating database tables
@@ -451,7 +453,7 @@ We could use UNION or EXCEPT to find people who have asked either or only one ty
 
 A subquery is a full query that is embedded in a larger query. 
 
-###  3.2.1 Subqueries in the FROM statement
+### 3.2.1 Subqueries in the FROM statement
 
 We can use subqueries in the FROM statement to create a temporary table to use in a query. Here we'll do it in the context of a join.
 
@@ -511,6 +513,35 @@ For more details on subqueries, see the video on "subqueries in where statements
 
 > **Challenge**: Create a frequency list of the tags used in the top 100 most answered questions. Note there is a way to do this with a JOIN and a way without a JOIN.
 
+### 3.2.3 Using WITH
+
+The WITH clause allows you to create a temporary table to then use in an associated SELECT statement. So it provides similar functionality to using a view but without it being a persistent part of the database. The temporary table is only available within the associated SELECT statement. WITH can only occur as part of a query with SELECT.
+
+Let's see use of WITH to accomplish what we did with a subquery in the FROM statement above.
+
+
+```{r, eval=FALSE}
+dbGetQuery(db, "with most_responsive as (
+                select ownerid, count(*) as n_answered from answers
+                group by ownerid order by n_answered desc limit 1000
+                )
+                select * from questions join answers A
+                on questions.questionid = A.questionid
+                join most_responsive on A.ownerid = most_responsive.ownerid")
+```
+
+One could also replace the subquery in the WHERE statement above using WITH.
+
+```{r, eval=FALSE}
+dbGetQuery(db, "with tmp as (select distinct ownerid from
+                questions join questions_tags
+                on questions.questionid = questions_tags.questionid
+                where tag = 'python')
+                select avg(UpVotes) from users where userid in
+                tmp")       
+```
+
+Finally, you can create multiple temporary tables in the WITH clause. This can help make your query more modular without the complication of creating views that will only be used once.
 
 ## 3.3 Window functions
 
